--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <base href="/">
-    <title>Emovi</title>
+    <title>Grade My Look</title>
     <meta charset="utf-8">
-    <link href="assets/styles/styles.css" rel="stylesheet"/>
+    <link href="src/assets/styles/styles.css" rel="stylesheet"/>
 </head>
-<body style="background: black">
+<body>
 <app-top></app-top>
 <app-second></app-second>
 <app-main></app-main>
