авторизация через яндекс

--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,15 @@
     <base href="/">
     <title>Grade My Look</title>
     <meta charset="utf-8">
-    <link href="src/assets/styles/styles.css" rel="stylesheet"/>
+    <link href="src/assets/styles/styles.css">
 </head>
 <body>
-<app-top></app-top>
-<app-second></app-second>
+<app-yandex-autorization></app-yandex-autorization>
 <app-main></app-main>
-<app-buttom></app-buttom>
+<!--<app-top></app-top>-->
+<!--<app-second></app-second>-->
+<!--<app-main></app-main>-->
+<!--<app-buttom></app-buttom>-->
 <app-root>
 </app-root>
 
