--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,14 @@
     <title>Grade My Look</title>
     <meta charset="utf-8">
     <link href="src/assets/styles/styles.css">
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/^1.12.2/themes/prism.css" />
 </head>
 <body>
 <app-yandex-autorization></app-yandex-autorization>
 <app-main></app-main>
 <app-root>
 </app-root>
-
 </body>
 </html>
